<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item android:title="@string/orders"
            android:id="@+id/nav_seller_orders"
            android:icon="@drawable/ic_all_products"/>
        <item android:title="@string/your_products"
            android:id="@+id/nav_seller_products"
            android:icon="@drawable/ic_orders"/>
        <item android:title="@string/all_products"
            android:id="@+id/nav_seller_all_products"
            android:icon="@drawable/ic_shop"/>
        <item android:id="@+id/nav_seller_min_amount"
            android:title="@string/min_amount"
            android:icon="@drawable/ic_min"/>
    <group android:checkableBehavior="single">
        <item android:title="@string/account">
            <menu>
                <item android:title="Logout"
                    android:id="@+id/nav_seller_logout"
                    android:icon="@drawable/ic_logout"/>
            </menu>
        </item>

    </group>
</menu>