<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item android:title="@string/all_products"
            android:id="@+id/nav_buyer_all_products"
            android:icon="@drawable/ic_all_products" />
        <item android:title="@string/orders"
            android:id="@+id/nav_buyer_orders"
            android:icon="@drawable/ic_orders"/>
    </group>
    <group android:checkableBehavior="single">
        <item android:title="@string/account">
            <menu>
                <item android:title="Logout"
                    android:id="@+id/nav_buyer_logout"
                    android:icon="@drawable/ic_logout"/>
            </menu>
        </item>
    </group>
    <item android:id="@+id/search_buyer"
        android:title="Search_Seller"
        android:icon = "@drawable/ic_search"
        app:showAsAction="always"/>
</menu>